--- a/02/pubspec.yaml
+++ b/02/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.3.0
   firebase_auth: ^5.1.3
   firebase_database: ^11.0.4
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
